xx/xx/2010 - MythBox 1.0.x
=============================
  New
  
  Fixed
    - TVRage metadata with missing seasons caused lookup failures 
    
11/25/2010 - MythBox 1.0.0
=============================
  New
    - Issue 125 - Added Frech translations (thanks ddekani)
    - TVRage metadata caching for Season & Episode
    - FFMpeg binary for Mac and Windows unbundled from installation zip and also removed from Settings screen. Now downloads on demand.
    - New icon (tnx freezy)
    - Added to XBMC addon repo for easy updates
   
  Fixed
    - Issue 124 - Fixed parsing another variation of ffmpeg output
    - Issue 130 - Unable to play a recording when the cache lookup for a thumbnail fails
    - Issue 131 - Hours in timestamps are not displayed correctly on Macs
    - Comm skips on HDPVR 1080i recordings incorrect because ffmpeg reports incorrect framerate  

10/11/2010 - MythBox RC2
=============================
  New  
    - Added Sort feature to the Upcoming Recordings screen
    - Issue 93 - Added splash screen
    - FFmpeg output is cached for framerate extraction used by comm flagging
    - Added 'Enable Aggressive Caching' to Settings->MythTV to pre-cache framerate and commercial break info
    - Added Season and Episode to the Recording Details screen when available
    - Added TVRage as a provider of TV show metadata (used for season & episode)
    - Commercial breaks are only skipped once during playback (restarting playback in 'Play' only mode is no longer necessary if the comm break info is incorrect)
    - Issue 97 - Myth TV hostname and port are now queried directly from the database. Changed to read-only on the Settings->MythTV screen
    - Issue 106 - More responsive fanart lookup based on the current list selection in the Watch TV screen
    - Issue 109 - Enabled navigation from the MythBox Settings screen to the XBMC Settings screen 
    - Issue 114 - Added slave backend hostname to the comm flag status on the Home screen